--- a/my-app/pages/loginpage/styles/LoginCss.module.css
+++ b/my-app/pages/loginpage/styles/LoginCss.module.css
@@ -41,7 +41,7 @@
 
 
 .LoginPage {
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     text-align: center;
   }
@@ -49,8 +49,6 @@
   .LoginLogo {
     padding-top: 25px;
     padding-bottom: 15px;
-    width: 70%;
-    color:red;
     
     text-align: center;
     margin: 0 auto;
@@ -60,38 +58,37 @@
     display: flex;
     flex-direction: column; /* 세로 정렬을 위한 열 방향 설정 */
     align-items: center; /* 가운데 정렬 */
-    width:100%;
-    height: 350px;
+    width:60%;
+    height: 390px;
     margin: 0 auto;
     border: 1px solid black;
     border-radius: 30px;
-    margin-top: 40%;
+    margin-top: 15%;
   }
   .LoginPageBtn{
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
-    margin-right: 20%;
-    margin-left: 20%;
+    margin-top: 10px;
+    height: 50px;
+  }
+  .KLoginPageBtn{
+    width: 86%;
+    margin: 0 auto;
     margin-top: 10px;
     height: 50px;
   }
 
-   .LoginBox  table {
-    width: 60%;
-    border-radius: 10%;
-
-    margin: 0 auto;
-  }
   
   .LoginBox table td {
-
+    border-radius: 7px;
     border: 1px solid #000;
     padding: 10px;
+    width: 500px;
   }
   
   .LoginBox table input {
-    
-    width: 80%;
+  
+    width: 90%;
     height: 50px;
     border: 0px solid #000;
   }
@@ -104,7 +101,12 @@
     float: left;
     margin-right: 20px;
     font-size: 10px;
-    margin-top: 5px; 
+    margin-top: 15px; 
     
 }
 
+
+
+.red{
+  color:red;
+}
