--- a/my-app/pages/listpage/styles/ListPageCss.module.css
+++ b/my-app/pages/listpage/styles/ListPageCss.module.css
@@ -14,9 +14,10 @@
     }
     .DESC{
         font-size: 9px;
+        margin-top: 10px !important;
+
         width: 150px !important;
 
-        margin-bottom: 0px !important;
     }
     #PointBtn{
         width: 100% !important;
@@ -29,7 +30,7 @@
         width: 100% !important;
         height: 120px !important;
 
-        margin-top:103px !important;
+        margin-top:114px !important;
     }
 
 
@@ -60,8 +61,14 @@
     .ListImgBox img{
         height: 100% !important;
     }
+    .ListImg{
+        background-color: red;
+        width: 18% !important;
+        float: left !important;
+    }
     .ListImg img{
-        width: 30% !important;
+        
+        width: 100% !important;
     }
     .SNSBTN{
         width: 32% !important;
@@ -85,9 +92,16 @@
     }
     .ListItem{
         position: relative;
-        right: 36% !important;
+        height: 65px !important;
+        width:560px !important;
+        right: 25% !important;
     }
 
+    .Episode{
+        width: 40% !important;
+        margin-top: 20px !important;
+        font-size: 11px !important;
+    }
 
 
 }
@@ -214,7 +228,7 @@
     .InfoBtn{
         width: 100% !important;
         float: left;
-        margin-top: 17px !important;
+        margin-top: 23px !important;
     }
     #PointBtn{
         width: 33% !important;
@@ -286,7 +300,8 @@
     .ListItem{
         position: relative;
         right:15% !important; 
-        width: 100%;
+        width: 280px !important;
+        height: 55px !important;
     }
     .ListImg {
         width: 35% !important;
@@ -300,11 +315,10 @@
         float: left;
     }
     .Episode {
-        width:60% !important;
+        width:40% !important;
         height: 100%;
-        display: block;
-        
-        align-items: center;
+        font-size: 10px !important;
+        margin-top: 0px !important;
       }
     .LT{
         width: 100% !important;
@@ -314,13 +328,14 @@
         float: left !important;
     }
     .Episode{
-        margin-top: 23px !important; 
+        margin-top: 15px !important; 
     }
 }
 
 
 
 .ListPage{
+    max-width: 1920px;
     width: 80%;
     font-family: 'Jua', sans-serif;
     list-style: none;
@@ -328,24 +343,29 @@
 }
 .ListInfo{
     height: 100px;
+    max-width: 1920px;
+
     width: 100%;
     float: left;
     margin: 0 auto;
     margin-top: 20px;
 }
 .ListImgBox{
-    position: relative;
-    bottom: 1.6vw;
+    max-width: 1920px;
+
     float: left;
-    width: 20%;
+    width: 15%;
 }
 
 .ListInfoBox{
+    max-width: 1920px;
     width: 100%;
     float: left;
     height: 290px;
 }
 .ListImgBox img{
+    max-width: 1920px;
+
     float: left;
     width: 100%;
     height: 300px;
@@ -354,15 +374,20 @@
 }
 
 .ListInfo p{
+    max-width: 1920px;
+
     float: left;
     width: 100%;
 }
 .ConTent{
+    max-width: 1920px;
+
     float: left !important;
 }
 .ListInfot{
+    max-width: 1920px;
     float: left;
-    width: 79%;
+    width: 84.3%;
     height: 263px;
     margin-left: 10px;
 }
@@ -390,12 +415,14 @@
     float: left;
 }
 .List{
+    max-width: 1920px;
+
     padding: 0;
 }
 
 .InfoBtn{
     width: 100%;
-    margin-top: 187px;
+    margin-top: 226px;
 }
 
 .IBtn{
@@ -407,13 +434,14 @@
 }
 #PointBtn{
     margin-bottom: 5px;
-    width: 98%;
+    width: 100%;
+    max-width: 1920px;
     border: 1px solid rgb(208, 249, 208);
     background-color: rgb(210, 246, 210);
 }
 .SNSBTN{
     border-radius: 5px;
-    width: 36.9%;
+    width: 39.2%;
     margin-left: 10px;
     height: 35px;
 
@@ -426,7 +454,10 @@
 .ListBox{
     width: 100%; 
     float: left;
+    max-width: 1920px;
+
 }
+
 
 
 .Pagination{
@@ -446,8 +477,12 @@
     width: 100%;
 }
 .ListItem{
+    max-width: 1920px;
+    width: 100%;
     box-sizing: border-box; /* padding과 border가 요소 크기에 포함되도록 설정 */
-    height: 65px;
+    height:120px;
+    float: left;
+    margin-top: 0px;
     border-bottom: 1px solid rgb(230, 226, 226);
 }
 /* .ListItem .ListImg img{
@@ -457,19 +492,21 @@
     float: left;
 } */
 .ListItem .ListImg img{
-    width:10%;
-    height: 50%;
+    width: 12%;
     object-fit: contain;
+    max-width: 1920px;
     float: left;
 }
 .Episode{
-    margin-top: 1.5vw;
+    max-width: 1920px;
+
+    margin-top: 40px;
     width: 50%;
     height: 30px;
-    font-size: 10px;
+    font-size: 15px;
     font-weight: bold;
     float: left;
-    margin-left: 2%;
+    margin-left: 20px;
 }
 
 
@@ -481,11 +518,11 @@
 
 
 .DESC{
-    font-size: 12px;
+    font-size: 15px;
     float: left;
+    margin-top: 40px;
+    margin-bottom: 13px;
     width: 9%;
-    border-bottom: 1px solid rgb(230, 226, 226);
-    margin-bottom: 10px;
 }
 .DESC span{
     cursor: pointer;
@@ -498,4 +535,5 @@
 
 .List li{
     list-style: none;
+
 }
