--- a/my-app/src/Header/styles/Heder.module.css
+++ b/my-app/src/Header/styles/Heder.module.css
@@ -1,6 +1,5 @@
 @media screen and (max-width:721px) and (min-width:362px) {
     .LogoBox .Logo{
-        margin-top:20px !important;
         font-size: 23px !important;
     }
     .InputBox{
@@ -75,21 +74,18 @@
         height: 100%;
     }
     .LogoBox .Logo{
-        margin-top: 15px;
-        font-size: 23px !important;
-
+        font-size: 15px !important;
     }
     .InputBox{
         margin-left: 45px;
         background-color: gainsboro;
     }
     .SerchBar{
-        margin-top: 12px !important;
+        margin-top: 25px !important;
         width: 100% !important;
     }
     .header{
         width: 100% !important;
-        height: 40px !important;
     }
     .SerchBar input{
         width: 40% !important;
@@ -150,13 +146,13 @@
     width: 50%;    
 }
 .header .Logo{
-    font-size: 1.5vw;
+    font-size: 27px;
     float: left;
     width: 10%;
 }
 .LogoBox h1{
     float: left;
-    line-height: 5vw;
+    line-height:70px;
 }
 .rb{
     width: 50%;
