--- a/my-app/src/styles/NewToonCss.module.css
+++ b/my-app/src/styles/NewToonCss.module.css
@@ -24,27 +24,29 @@
    .NewToonBOx{
     width: 100% !important;
   }
+  .SBox{
+    width: 100%;
+  }
   .NewToonPage
   {
     width: 100% !important;
     position: relative;
     right: 12.5%;
-    height: 275px !important;
+    height: 205px !important;
   }
   .NewToonInfo {
-    width: 100%  !important;
-    height: 269px !important;
-    align-items: center;
-    
-    float: left !important;
-    margin-left: 17% !important;
-    justify-content: center;
+    width: 150px !important;
+    height: 200px !important;
     cursor: pointer;
+    margin-left: 100px !important;
+    background-color: red;
   }
 
 
   .NewToonInfo img {
     width: 100% !important;
+
+
   }
 
 
@@ -66,7 +68,7 @@
 
   .NewToonInfo {
     position: relative;
-    right: 25%;
+    right: 30%;
     width: 100% !important;
     height: 200px !important;
     cursor: pointer;
@@ -83,9 +85,12 @@
 
   .NewToonBOx{
     width: 100% !important;
+    background-color: rebeccapurple ;
   }
   .NewToonPage
   {
+    background-color: rebeccapurple ;
+
     width: 100% !important;
     position: relative;
     right: 12.5%;
@@ -94,10 +99,9 @@
   .NewToonInfo {
     width: 100%  !important;
     height: 169px !important;
-    align-items: center;
     
     float: left !important;
-    margin-left: 17% !important;
+    margin-left: 20% !important;
     justify-content: center;
     cursor: pointer;
   }
@@ -108,37 +112,45 @@
   }
 
 }
+.NewToonBOx{
+  width: 100% !important;
+}
 
 
 .NewToonPage {
-  background-color: rgba(159, 142, 142,0.4);
-  float: left;
+  /* background-color: rgba(159, 142, 142,0.4); */
+  background-color: rgba(0, 0, 0, 0.1);
   width: 100%;
-  justify-content: center;
-}
-.slider {
-  display: flex;
-  justify-content: center;
+  float: left;
+  height: 500px;
+  /* justify-content: center; */
 }
 
 .NewToonInfo.active {
-  transform: translateX(calc(100% /33.3%));
+  /* transform: translateX(calc(100% /33.3%)); */
 }
 
 .NewToonInfo {
-  width: 100%;
-  display: flex;
+  /* width: 100%  !important;
   align-items: center;
+  width: calc(33.3%) ;
+  
+  float: left !important;
+  margin-left: 17% !important;
   justify-content: center;
-  cursor: pointer;
+  cursor: pointer; */
+  height: 450px;
+  width: 380px;
+  margin-top: 20px;
+
+
 }
 
 
 
-
-.NewToonItem img {
-  object-fit: contain ;
-  height: 300px;
+.NewToonInfo img {
+  object-fit: contain;
+  width: 100%;
 
 }
 
