--- a/my-app/src/Component/Tag/styles/TagCss.module.css
+++ b/my-app/src/Component/Tag/styles/TagCss.module.css
@@ -37,7 +37,9 @@
     .tagItem li{
         width: 18.5% !important;
         margin-bottom: 15px !important;
-        margin-left: 17ㅈpx !important;
+    }
+    .tag h3{
+        margin-bottom: 30px !important;
     }
 
 }
@@ -59,7 +61,10 @@
     }
     #tagtop{
         float: left !important;
-        margin-top: 0px !important;
+        margin-top: 10px !important;
+        margin-bottom: 30px !important;
+    }
+    .tag h3{
         margin-bottom: 30px !important;
     }
 }
@@ -70,6 +75,7 @@
     margin-top: 0px;
 }
 .tag h3{
-    font-size: 16px;
+    font-size: 23px !important;
     float: left;
+    margin-bottom: 5px;
 }
