--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -16,17 +16,17 @@
         line-height: 0px !important;
     }
     .RankNum{
-        width: 18% !important;
+        width: 17.5% !important;
         float: left;
-        font-size: 10px;
-        margin-left: 2%;
-        margin-top: 15px !important;
+        font-size: 12px !important;
+        margin-left: 2px !important;
+        margin-top: 0px !important;
     }
     .RankText{
         float: left;
-        width: 30% !important;
-        font-size: 13px;
-        margin-top: 15px !important;
+        margin-left: 0px !important;
+        width: 40% !important;
+        margin-top: 2px !important;
     }
     #ll{
         width: 66% !important;
@@ -145,7 +145,7 @@
         width: 100% !important;
     }
     .Rank .RankImg{
-        width:40% !important;
+        width:35% !important;
         padding: 0px !important;
     }
     .RankImg img{
@@ -165,8 +165,6 @@
         width: 100%;
     }
     .RankText{
-        font-size: 1px;
-        width: 31% !important;
         float: right;
     }
 
@@ -271,7 +269,10 @@
 
 
 @media screen and (max-width:361px) and (min-width:10px) {
-
+    .Writer{
+        line-height: 0px !important;
+        margin-top: 10px;
+    }
     .aTMT{
         font-size: 6px !important;
         margin-top: 1px !important;
@@ -388,6 +389,7 @@
         float: left !important;
     }
 
+
 }
 
 @media screen and (max-width:362px) and (min-width:30px){
@@ -431,6 +433,7 @@
         object-fit: contain;
     
     }
+
 }
 .Categories{
     font-size: 23px !important;
@@ -518,7 +521,6 @@
 .Mid .DayToon .DayToonItem {
     width: 150px;
     height: 200px;
-    background-color: red;
     margin-bottom: 50px;
     margin-left: 0px;
 }
@@ -595,7 +597,7 @@
 .RankText{
     float: left;
     font-size: 15px;
-    width: 30%;
+    width: 10%;
     margin-left: 3%;
     margin-top: 50px;
 }
@@ -615,7 +617,7 @@
 
 
 .ATIMG{
-    width: 100%;
+    width: 80%;
     height: 100%;
     object-fit: cover;
 }
@@ -656,5 +658,9 @@
     width: 100%
 }
 .Writer{
+    color:gray;
+}
+.RankAT
+{
     color:gray;
 }
